--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 &#9776; <!-- Icono de menú -->
             </button>
             <ul class="nav-links">
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="#inf">Nosotros</a></li>
             </ul>
         </nav>
     </header>
